--- a/index.html
+++ b/index.html
@@ -8,16 +8,99 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@400;700&family=Ubuntu:wght@300&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@400;700&family=Ubuntu:wght@400&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital@1&family=Roboto:wght@400;700&family=Ubuntu:wght@300&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 
 <body>
-    <section id="title">
-        <h1>Meet Our Team</h1>
-    </section>
+    <div class="container">
+        <section id="title">
+            <h1>Meet Our Team</h1>
+        </section>
+
+        <section id="sub-title">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In, eos ipsa? Nostrum, tenetur. Deleniti vero
+                omnis
+                ad architecto? Nihil, deserunt cumque eveniet neque facilis temporibus nam dolores cupiditate delectus
+                quibusdam!</p>
+        </section>
+
+        <section class="cards1 clearfix">
+            <div class="float-left clearfix">
+                <img class=" float-left pht" src="./assets/img/male1.png" alt="male1">
+
+                <div class=" text float-left">
+                    <h4>MARCO BIANCHI </h4>
+                    <h5>Designer</h5>
+                    <h5 class="mail">marcobianchi@team.com</h5>
+                </div>
+            </div>
+
+            <div class="float-left clearfix">
+                <img class="float-left pht" src="./assets/img/female1.png" alt="female1">
+                <div class=" text float-left">
+                    <h4>LAURA ROSSI </h4>
+                    <h5>Front-end Developer</h5>
+                    <h5 class="mail">laurarossi@team.com</h5>
+                </div>
+
+            </div>
+
+            <div class="float-left clearfix ">
+                <img class="float-left pht" src="./assets/img/male2.png" alt="male2">
+                <div class=" text float-left">
+                    <h4>GIORGIO VERDI </h4>
+                    <h5>Back-end Developer</h5>
+                    <h5 class="mail">giorgioverdi@team.com</h5>
+                </div>
+
+            </div>
+
+        </section>
+
+        <section class="cards1 clearfix">
+            <div class="float-left clearfix">
+                <img class=" float-left pht" src="./assets/img/female2.png" alt="female2">
+
+                <div class=" text float-left">
+                    <h4>MARTA IPSUM</h4>
+                    <h5>SEO specialist</h5>
+                    <h5 class="mail">martaipsum@team.com</h5>
+                </div>
+            </div>
+
+            <div class="float-left clearfix">
+                <img class="float-left pht" src="./assets/img/male3.png" alt="male3">
+                <div class=" text float-left">
+                    <h4>ROBERTO LOREM </h4>
+                    <h5>Project Manager</h5>
+                    <h5 class="mail">robertolorem@team.com</h5>
+                </div>
+
+            </div>
+
+            <div class="float-left clearfix ">
+                <img class="float-left pht" src="./assets/img/female3.png" alt="female3">
+                <div class=" text float-left">
+                    <h4>DANIELA AMET </h4>
+                    <h5>Analyst</h5>
+                    <h5 class="mail">danielaamet@team.com</h5>
+                </div>
+
+            </div>
+
+        </section>
+
+
+    </div>
+
 </body>
 
 </html>
