--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital@1&family=Roboto:wght@400;700&family=Ubuntu:wght@300&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Float cards</title>
 </head>
 
 <body>
