--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="float-left clearfix">
                 <img class=" float-left pht" src="./assets/img/male1.png" alt="male1">
 
-                <div class=" text float-left">
+                <div class=" text">
                     <h4>MARCO BIANCHI </h4>
                     <h5>Designer</h5>
                     <h5 class="mail">marcobianchi@team.com</h5>
@@ -45,7 +45,7 @@
 
             <div class="float-left clearfix">
                 <img class="float-left pht" src="./assets/img/female1.png" alt="female1">
-                <div class=" text float-left">
+                <div class=" text ">
                     <h4>LAURA ROSSI </h4>
                     <h5>Front-end Developer</h5>
                     <h5 class="mail">laurarossi@team.com</h5>
@@ -55,7 +55,7 @@
 
             <div class="float-left clearfix ">
                 <img class="float-left pht" src="./assets/img/male2.png" alt="male2">
-                <div class=" text float-left">
+                <div class=" text">
                     <h4>GIORGIO VERDI </h4>
                     <h5>Back-end Developer</h5>
                     <h5 class="mail">giorgioverdi@team.com</h5>
@@ -69,7 +69,7 @@
             <div class="float-left clearfix">
                 <img class=" float-left pht" src="./assets/img/female2.png" alt="female2">
 
-                <div class=" text float-left">
+                <div class=" text ">
                     <h4>MARTA IPSUM</h4>
                     <h5>SEO specialist</h5>
                     <h5 class="mail">martaipsum@team.com</h5>
@@ -78,7 +78,7 @@
 
             <div class="float-left clearfix">
                 <img class="float-left pht" src="./assets/img/male3.png" alt="male3">
-                <div class=" text float-left">
+                <div class=" text ">
                     <h4>ROBERTO LOREM </h4>
                     <h5>Project Manager</h5>
                     <h5 class="mail">robertolorem@team.com</h5>
@@ -88,7 +88,7 @@
 
             <div class="float-left clearfix ">
                 <img class="float-left pht" src="./assets/img/female3.png" alt="female3">
-                <div class=" text float-left">
+                <div class=" text ">
                     <h4>DANIELA AMET </h4>
                     <h5>Analyst</h5>
                     <h5 class="mail">danielaamet@team.com</h5>
